# ReSurfEMG

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  ML_environment.yml  NOTICE.md  README.md  Untitled.ipynb  config_example_resurfemg.json  developers.html  environment.yml  environment2.yml  genindex.html  index.html  index.md  medical-professionals.html  modules.html  new_environment.yml  notebooks_guide.md  objects.inv  old_environment.yml  py-modindex.html  pyproject.toml  resurfemg.cli.cli.html  resurfemg.cli.html  resurfemg.config.config.html  resurfemg.config.html  resurfemg.converter_functions.html  resurfemg.data_connector.config.html  resurfemg.data_connector.converter_functions.html  resurfemg.data_connector.data_classes.html  resurfemg.data_connector.file_discovery.html  resurfemg.data_connector.html  resurfemg.data_connector.peakset_class.html  resurfemg.data_connector.synthetic_data.html  (+31 more)
.helpers/: Dockerfile
.vendor/: README.md
_sources/: developers.rst.txt  index.rst.txt  medical-professionals.rst.txt  resurfemg.config.rst.txt  resurfemg.data_connector.converter_functions.rst.txt  resurfemg.data_connector.rst.txt  resurfemg.helper_functions.data_classes_quality_assessment.rst.txt  resurfemg.helper_functions.helper_functions.rst.txt  resurfemg.helper_functions.math_operations.rst.txt  resurfemg.ml.rst.txt  resurfemg.pipelines.ipy_widgets.rst.txt  resurfemg.pipelines.pipelines.rst.txt  resurfemg.postprocessing.baseline.rst.txt  resurfemg.postprocessing.rst.txt  resurfemg.rst.txt
_static/: documentation_options.js
community_demos/: community_1.ipynb
conda-pkg/: bld.bat  build.sh  meta.yaml
dashboard/: app.py  callbacks.py  environment_dashboard.yml  index.py  layouts.py  static_variables.py  utils.py
docs/: conf.py  developers.rst  index.rst  medical-professionals.rst  modules.rst  resurfemg.cli.cli.rst  resurfemg.cli.rst  resurfemg.config.config.rst  resurfemg.config.rst  resurfemg.converter_functions.rst  resurfemg.data_classes.data_classes.rst  resurfemg.data_classes.rst  resurfemg.data_connector.config.rst  resurfemg.data_connector.data_classes.rst  resurfemg.data_connector.file_discovery.rst  resurfemg.data_connector.peakset_class.rst  resurfemg.data_connector.rst  resurfemg.data_connector.synthetic_data.rst  resurfemg.data_connector.tmsisdk_lite.rst  resurfemg.helper_functions.rst  resurfemg.helper_functions.visualization.rst  resurfemg.ml.rst  resurfemg.multi_lead_type.rst  resurfemg.pipelines.processing.rst  resurfemg.pipelines.rst  resurfemg.pipelines.synthetic_data.rst  resurfemg.postprocessing.event_detection.rst  resurfemg.postprocessing.features.rst  resurfemg.postprocessing.quality_assessment.rst  resurfemg.postprocessing.rst  resurfemg.preprocessing.ecg_removal.rst  resurfemg.preprocessing.envelope.rst  resurfemg.preprocessing.filtering.rst  resurfemg.preprocessing.rst  resurfemg.rst  resurfemg.tmsisdk_lite.rst  resurfemg.visualization.rst  resurfemg.visualization.visualization.rst
hidden/: cohere.ipynb
historical_notebooks/: Untitled.ipynb  applied_ml.ipynb  diagnose_emg_vent_relationship-Copy1.ipynb  entropy_eline_near_final-Copy1.ipynb  entropy_open_explore_param.ipynb  lag_lead_match_downsample_BAD.ipynb  notes_python_interface.ipynb  poly5reading.ipynb  widgeted_entropy_updated_june.ipynb
ml_models/: finalized_lr_model.sav  finalized_lr_model_in_111.sav  finalized_svm_model.sav  finalized_svm_model_in_111.sav
notes_tmsisdk/: requirements_Linux.txt  requirements_Windows.txt
open_work/: Analysis_Elshof.ipynb  ICA_land.ipynb  ICA_playground.ipynb  ML_EMG_1-Copy1.ipynb  ML_EMG_1.ipynb  Untitled.ipynb  Untitled1.ipynb  amplitude_exploration.ipynb  applied_ml.ipynb  area_under_curve_and_max_breath.ipynb  area_under_curve_work.ipynb  array_time_matching-Copy1.ipynb  array_time_matching.ipynb  basic_preprocessing.ipynb  binder_for_participants1.ipynb  breath_detection_variability.ipynb  config_demo.ipynb  diagnose_emg_vent_relationship-Copy1.ipynb  diagnose_emg_vent_relationship.ipynb  distances.ipynb  ecg_puller.ipynb  edit_distance_emg_vent.ipynb  entropy_cycler.ipynb  entropy_exploration.ipynb  (+26 more)
(+358 files in other folders)
